styling in profile page

--- a/client/src/app/admin/components/header/header.component.html
+++ b/client/src/app/admin/components/header/header.component.html
@@ -11,7 +11,7 @@
         </div>
       </div>
     </button>
-    <a routerLink="admin"><img src="assets\images\logo.png" id="logo" alt="logo" /></a>
+    <a routerLink=""><img src="assets\images\logo.png" id="logo" alt="logo" /></a>
     <div class="user_card_btn">
       <button class="user_btn"><a routerLink="profile"><i class='bx bx-user'></i></a></button>
       <button class="cart_btn"><i class="bx bx-cart"></i></button>
