--- a/client/src/app/admin/components/profile/profile.component.scss
+++ b/client/src/app/admin/components/profile/profile.component.scss
@@ -24,19 +24,6 @@
   background-color: rgba(255, 255, 255, 0.8);
 }
 
-// .image {
-//   width: 100%;
-//   height: 200px;
-//   background-color: rgba(255, 255, 255, 0.8);
-//   border-radius: 10px 10px 0 0;
-// }
-
-// .image img {
-//   object-fit: cover;
-//   width: 100%;
-//   height: 100%;
-//   border-radius: 10px 10px 0 0;
-// }
 .image {
   text-align: center;
   display: flex;
@@ -113,6 +100,24 @@
   font-size: 14px;
 }
 
+.address .update-profile-btn {
+  margin-top: 2rem;
+  padding: 0.8rem 1.2rem;
+  border-radius: 5px;
+  border: 1px solid #db7f79;
+  border-radius: 5px;
+  color: white;
+  background-color: #db7f79;
+  box-shadow: 0px 5px 10px #db7f79;
+  cursor: pointer;
+  font-weight: bold;
+  &:hover {
+    border: 1px solid #c96c80;
+    background-color: #c96c80;
+    box-shadow: 0px 7px 10px #c96c80;
+  }
+}
+
 .house,
 .city,
 .locality,
@@ -132,9 +137,29 @@
     justify-content: center;
     flex-wrap: nowrap;
     margin: 0.2rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     button {
-      margin: 0.2rem;
-      padding: 0.3rem 0.6rem;
+      padding: 0.5rem 0.6rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      .bx {
+        display: none;
+      }
+
+      @include mobile() {
+        padding: 0.4rem 0.6rem;
+        p {
+          display: none;
+        }
+      }
+
+      @include tab() {
+        .bx {
+          display: block;
+        }
+      }
     }
   }
 }
