--- a/client/src/app/admin/components/profile/profile.component.html
+++ b/client/src/app/admin/components/profile/profile.component.html
@@ -3,16 +3,16 @@
         <img style="height: 200px; width: 200px;" src="assets\images\offer1.png" alt="">
     </section>
     <section class="containts">
-        <form #userDetails class="">
+        <form #userDetailsForm [formGroup]="userdetailsForm" (ngSubmit)="SubmiteForm()" class="">
             <div class="user-details">
                 <div class="user-name">
                     <label for="name">Name</label>
-                    <input type="text" [disabled]="isDisabled" name="name">
+                    <input type="text" [value]="userName" [disabled]="isDisabled" name="name">
                 </div>
 
                 <div class="user-email">
                     <label for="email">Email</label>
-                    <input type="email" [disabled]="isDisabled" name="email">
+                    <input type="email" [value]="userEmail" [disabled]="isDisabled" name="email">
                 </div>
 
                 <div class="user-phone">
@@ -22,7 +22,7 @@
 
                 <div class="user-password">
                     <label for="password">Password</label>
-                    <input type="password" [disabled]="isDisabled" name="password">
+                    <input type="password" value="XXXXX" [disabled]="isDisabled" name="password">
                 </div>
 
             </div>
@@ -36,7 +36,7 @@
 
                 <div class="city">
                     <label for="city">City/Town</label>
-                    <input type="text" [disabled]="isDisabled" name="city">
+                    <input type="text" maxlength="5" [disabled]="isDisabled" name="city">
                 </div>
 
                 <div class="locality">
@@ -46,7 +46,9 @@
 
                 <div class="pin-code">
                     <label for="pin-code">Pin Code</label>
-                    <input type="number" [disabled]="isDisabled" name="pin-code">
+                    <!-- <input type="number" #pinCode (keyup)="getPinCode(pinCode.value)" [disabled]="isDisabled" name="pin-code"> -->
+                    <input [style.border-color]="borderColor" type="number" #pinCode (keyup)="getPinCode(pinCode.value)"
+                        [disabled]="isDisabled" name="pin-code">
                 </div>
 
                 <div class="landmark">
@@ -56,7 +58,7 @@
 
                 <div class="state">
                     <label for="state">State</label>
-                    <input type="text" disabled name="state">
+                    <input type="text" [value]="state" disabled name="state">
                 </div>
 
                 <div class="alternative-phone">
@@ -79,7 +81,7 @@
 
                 </div>
 
-                <button (click)="prevent()" class="update-profile-btn">{{changeProfileBtn}}</button>
+                <button (click)="SubmiteForm()" class="update-profile-btn">{{changeProfileBtn}}</button>
             </div>
         </form>
 
