--- a/client/src/app/admin/components/profile/profile.component.scss
+++ b/client/src/app/admin/components/profile/profile.component.scss
@@ -20,7 +20,7 @@
   margin: auto;
   width: 80%;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  // box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   background-color: rgba(255, 255, 255, 0.8);
 }
 
@@ -62,6 +62,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 10px;
+  font-size: small;
 }
 
 .user-details label {
@@ -92,6 +93,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 10px;
+  font-size: small;
 }
 
 .address label {
