work on menu page

--- a/client/src/app/admin/components/menu/menu.component.html
+++ b/client/src/app/admin/components/menu/menu.component.html
@@ -1,1 +1,61 @@
-<p>menu works!</p>
+<div class="menu">
+    <div class="sorting"></div>
+    <div class="items">
+        <div class="item">
+            <div class="image-field">
+                <img src="https://assets.tatacliq.com/medias/sys_master/images/33131150409758.jpg" alt="">
+            </div>
+            <div class="name-details-price">
+                <p>Iteam Name</p>
+                <div class="in-details">
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                </div>
+                <p>Price : 50 Rs</p>
+            </div>
+            <div class="ratting-cart-btn">
+                <small>Ratting 4.5 S</small>
+                <button class="cart-btn">Add to cart</button>
+
+            </div>
+        </div>
+        <div class="item">
+            <div class="image-field">
+                <img src="https://assets.tatacliq.com/medias/sys_master/images/33131150409758.jpg" alt="">
+            </div>
+            <div class="name-details-price">
+                <p>Iteam Name</p>
+                <div class="in-details">
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                </div>
+                <p>Price : 50 Rs</p>
+            </div>
+            <div class="ratting-cart-btn">
+                <small>Ratting 4.5 S</small>
+                <button class="cart-btn">Add to cart</button>
+
+            </div>
+        </div>
+        <div class="item">
+            <div class="image-field">
+                <img src="https://assets.tatacliq.com/medias/sys_master/images/33131150409758.jpg" alt="">
+            </div>
+            <div class="name-details-price">
+                <p>Iteam Name</p>
+                <div class="in-details">
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                </div>
+                <p>Price : 50 Rs</p>
+            </div>
+            <div class="ratting-cart-btn">
+                <small>Ratting 4.5 S</small>
+                <button class="cart-btn">Add to cart</button>
+            </div>
+        </div>
+    </div>
+</div>
