menu page added

--- a/client/src/app/admin/components/menu/menu.component.html
+++ b/client/src/app/admin/components/menu/menu.component.html
@@ -3,7 +3,7 @@
     <div class="items">
         <div class="item">
             <div class="image-field">
-                <img src="https://assets.tatacliq.com/medias/sys_master/images/33131150409758.jpg" alt="">
+                <img src="assets\images\smoothie3.jpg" alt="">
             </div>
             <div class="name-details-price">
                 <p>Iteam Name</p>
@@ -15,14 +15,14 @@
                 <p>Price : 50 Rs</p>
             </div>
             <div class="ratting-cart-btn">
-                <small>Ratting 4.5 S</small>
-                <button class="cart-btn">Add to cart</button>
+                <small>Ratting:<br>★★★★★</small>
+                <button class="cart-btn"><i class='bx bx-md bx-cart-add'></i></button>
 
             </div>
         </div>
         <div class="item">
             <div class="image-field">
-                <img src="https://assets.tatacliq.com/medias/sys_master/images/33131150409758.jpg" alt="">
+                <img src="assets\images\smoothie2.jpg" alt="">
             </div>
             <div class="name-details-price">
                 <p>Iteam Name</p>
@@ -34,14 +34,14 @@
                 <p>Price : 50 Rs</p>
             </div>
             <div class="ratting-cart-btn">
-                <small>Ratting 4.5 S</small>
-                <button class="cart-btn">Add to cart</button>
+                <small>Ratting <br>★★★★☆</small>
+                <button class="cart-btn"><i class='bx bx-md bx-cart-add'></i></button>
 
             </div>
         </div>
         <div class="item">
             <div class="image-field">
-                <img src="https://assets.tatacliq.com/medias/sys_master/images/33131150409758.jpg" alt="">
+                <img src="assets\images\smoothie1.jpg" alt="">
             </div>
             <div class="name-details-price">
                 <p>Iteam Name</p>
@@ -53,8 +53,44 @@
                 <p>Price : 50 Rs</p>
             </div>
             <div class="ratting-cart-btn">
-                <small>Ratting 4.5 S</small>
-                <button class="cart-btn">Add to cart</button>
+                <small>Ratting:<br>★★★★★</small>
+                <button class="cart-btn"><i class='bx bx-md bx-cart-add'></i></button>
+            </div>
+        </div>
+        <div class="item">
+            <div class="image-field">
+                <img src="assets\images\smoothie5.jpg" alt="">
+            </div>
+            <div class="name-details-price">
+                <p>Iteam Name</p>
+                <div class="in-details">
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                </div>
+                <p>Price : 50 Rs</p>
+            </div>
+            <div class="ratting-cart-btn">
+                <small>Ratting:<br>★★★★★</small>
+                <button class="cart-btn"><i class='bx bx-md bx-cart-add'></i></button>
+            </div>
+        </div>
+        <div class="item">
+            <div class="image-field">
+                <img src="assets\images\smoothie4.jpg" alt="">
+            </div>
+            <div class="name-details-price">
+                <p>Iteam Name</p>
+                <div class="in-details">
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                    <small>alk alsgk</small><br>
+                </div>
+                <p>Price : 50 Rs</p>
+            </div>
+            <div class="ratting-cart-btn">
+                <small>Ratting:<br>★★★★★</small>
+                <button class="cart-btn"><i class='bx bx-md bx-cart-add'></i></button>
             </div>
         </div>
     </div>
