--- a/client/src/app/admin/components/header/header.component.html
+++ b/client/src/app/admin/components/header/header.component.html
@@ -5,7 +5,7 @@
         <button class="dropbtn"><i class="bx bx-menu bx-sm"></i></button>
         <div class="dropdown-content">
           <a routerLink="menu">Menu</a>
-          <a href="#">My Orders</a>
+          <a routerLink="orders">My Orders</a>
           <a href="#">Favorite</a>
           <a onclick="signOut()">Sign Out</a>
         </div>
@@ -25,9 +25,9 @@
       align-items: center;">
       <a routerLink=""><img src="assets\images\logo.png" id="logo" alt="logo" /></a>
       <ul class="navmenu">
+        <li><a routerLink="">Home</a></li>
         <li><a routerLink="menu">Menu</a></li>
-        <li><a href="#">FAQs</a></li>
-        <li><a href="#">My Orders</a></li>
+        <li><a routerLink="orders">My Orders</a></li>
         <li><button class="accounts_btn">
             <div class="dropdown">
               <button class="dropbtn">Account</button>
