favourite page added

--- a/client/src/app/admin/components/header/header.component.html
+++ b/client/src/app/admin/components/header/header.component.html
@@ -6,7 +6,7 @@
         <div class="dropdown-content">
           <a routerLink="menu">Menu</a>
           <a routerLink="orders">My Orders</a>
-          <a href="#">Favorite</a>
+          <a routerLink="favourite">Favorite</a>
           <a onclick="signOut()">Sign Out</a>
         </div>
       </div>
@@ -33,7 +33,7 @@
               <button class="dropbtn">Account</button>
               <div class="dropdown-content">
                 <a routerLink="profile">Profile</a>
-                <a href="#">Favorite</a>
+                <a routerLink="favourite">Favorite</a>
                 <a (click)="signOut()">Sign Out</a>
               </div>
             </div>
