cart page added

--- a/client/src/app/admin/components/header/header.component.html
+++ b/client/src/app/admin/components/header/header.component.html
@@ -14,7 +14,7 @@
     <a routerLink=""><img src="assets\images\logo.png" id="logo" alt="logo" /></a>
     <div class="user_card_btn">
       <button class="user_btn"><a routerLink="profile"><i class='bx bx-user'></i></a></button>
-      <button class="cart_btn"><i class="bx bx-cart"></i></button>
+      <button routerLink="cart" class="cart_btn"><i class="bx bx-cart"></i></button>
     </div>
   </div>
   <div class="desktop">
@@ -38,7 +38,7 @@
               </div>
             </div>
           </button></li>
-        <li><button class="cart_btn"><i class='bx bx-sm bx-cart'></i></button></li>
+        <li><button routerLink="cart" class="cart_btn"><i class='bx bx-sm bx-cart'></i></button></li>
       </ul>
     </nav>
   </div>
