--- a/client/src/app/admin/components/menu/menu.component.html
+++ b/client/src/app/admin/components/menu/menu.component.html
@@ -12,7 +12,7 @@
                     <small>alk alsgk</small><br>
                     <small>alk alsgk</small><br>
                 </div>
-                <p>Price : 50 Rs</p>
+                <p>Price : ₹ 50</p>
             </div>
             <div class="ratting-cart-btn">
                 <small>Ratting:<br>★★★★★</small>
@@ -31,7 +31,7 @@
                     <small>alk alsgk</small><br>
                     <small>alk alsgk</small><br>
                 </div>
-                <p>Price : 50 Rs</p>
+                <p>Price : ₹ 50</p>
             </div>
             <div class="ratting-cart-btn">
                 <small>Ratting <br>★★★★☆</small>
@@ -50,7 +50,7 @@
                     <small>alk alsgk</small><br>
                     <small>alk alsgk</small><br>
                 </div>
-                <p>Price : 50 Rs</p>
+                <p>Price : ₹ 50</p>
             </div>
             <div class="ratting-cart-btn">
                 <small>Ratting:<br>★★★★★</small>
@@ -68,7 +68,7 @@
                     <small>alk alsgk</small><br>
                     <small>alk alsgk</small><br>
                 </div>
-                <p>Price : 50 Rs</p>
+                <p>Price : ₹ 50</p>
             </div>
             <div class="ratting-cart-btn">
                 <small>Ratting:<br>★★★★★</small>
@@ -86,7 +86,7 @@
                     <small>alk alsgk</small><br>
                     <small>alk alsgk</small><br>
                 </div>
-                <p>Price : 50 Rs</p>
+                <p>Price : ₹ 50</p>
             </div>
             <div class="ratting-cart-btn">
                 <small>Ratting:<br>★★★★★</small>
