--- a/client/src/app/admin/components/cart/cart.component.html
+++ b/client/src/app/admin/components/cart/cart.component.html
@@ -2,32 +2,29 @@
     <section class="left">
         <div class="address">
             <div class="address-details">
-                <p> Deliver to :User Name , 302019 <small><button disabled>HOME</button></small></p>
-                <p>85 , Gardenia Hostel, Everest Vihar , Kings Road...</p>
+                <p> Deliver to :User Name , 302019 <button disabled><small>HOME</small></button></p>
+                <p>Ongraph technology, metro piller 32 ...</p>
             </div>
-            <button>Change</button>
+            <button mat-raised-button>Change</button>
         </div>
         <div class="cart-items">
             <div class="item">
                 <img src="assets\images\smoothie5.jpg" alt="">
                 <div class="item-details">
                     <p>Banana Smoothies</p>
-                    <p>Price : <small>50 Rs</small></p>
+                    <p>Price : <small>₹ 50</small></p>
                     <div class="quantity">
-                        <button> - </button>
-                        <span>1</span>
-                        <button> + </button>
+                        <button class="decrease"> <i class='bx bx-minus'></i> </button>
+                        <!-- <span>1</span> -->
+                        <button class="item-count">1</button>
+                        <button class="increase"> <i class='bx bx-plus'></i> </button>
                     </div>
 
                 </div>
                 <div class="order-or-not">
-                    <div class="delivey-time">
-                        <p>Delivery in 2 days, Sat |</p>
-                        <p><small>₹40 Free</small></p>
-                    </div>
                     <div class="buttons">
-                        <button>Remove</button>
-                        <button>Move to favourite</button>
+                        <button mat-stroked-button color="accent">Remove</button>
+                        <button mat-stroked-button>Move to favourite</button>
                     </div>
                 </div>
 
@@ -36,13 +33,29 @@
     </section>
     <section class="right">
         <p>PRICE DETAILS</p>
-        <br>
-        <p>Price (2 items)₹14,204</p>
-        <p>Discount− ₹3,242</p>
-        <p>Delivery Charges ₹80Free</p>
-        <p>Secured Packaging Fee ₹29</p>
-        <p>Total Amount ₹10,991</p>
-        <p>You will save ₹3,213 on this order</p>
-
+        <hr>
+        <div class="price">
+            <span>Price (2 items)</span>
+            <span>₹14,204</span>
+        </div>
+        <div class="Discount">
+            <span>Discount</span>
+            <span>− ₹3,242</span>
+        </div>
+        <div class="deliery-charge">
+            <span>Delivery Charges</span>
+            <span>₹80Free</span>
+        </div>
+        <div class="packaging-fee">
+            <span>Secured Packaging Fee</span>
+            <span>₹29</span>
+        </div>
+        <hr>
+        <div class="total-amount">
+            <span>Total Amount</span>
+            <span>₹10,991</span>
+        </div>
+        <hr>
+        <p> <small>You will save ₹3,213 on this order</small></p><button mat-raised-button>Place Order</button>
     </section>
 </div>
