cart service added || still have to work on that

--- a/client/src/app/admin/components/cart/cart.component.html
+++ b/client/src/app/admin/components/cart/cart.component.html
@@ -1,3 +1,4 @@
+<hr>
 <div class="cart">
     <section class="left">
         <div class="address">
@@ -8,54 +9,58 @@
             <button mat-raised-button>Change</button>
         </div>
         <div class="cart-items">
-            <div class="item">
-                <img src="assets\images\smoothie5.jpg" alt="">
-                <div class="item-details">
-                    <p>Banana Smoothies</p>
-                    <p>Price : <small>₹ 50</small></p>
-                    <div class="quantity">
-                        <button class="decrease"> <i class='bx bx-minus'></i> </button>
-                        <!-- <span>1</span> -->
-                        <button class="item-count">1</button>
-                        <button class="increase"> <i class='bx bx-plus'></i> </button>
+            <ng-container *ngFor="let item of cartItems;let index=index">
+                <div class="item">
+                    <img src="assets\images\smoothie5.jpg" alt="">
+                    <div class="item-details">
+                        <p>{{item.name}}</p>
+                        <p>Price : <small>₹ {{item.price}}</small></p>
+                        <div class="quantity">
+                            <button (click)="decreament(index)" class="decrease"> <i class='bx bx-minus'></i> </button>
+                            <button class="item-count">{{item.quantity}}</button>
+                            <button (click)="increament(index)" class="increase"> <i class='bx bx-plus'></i> </button>
+                        </div>
+
+                    </div>
+                    <div class="order-or-not">
+                        <div class="buttons">
+                            <button (click)="removeItem(index)" mat-stroked-button color="accent">Remove</button>
+                            <button mat-stroked-button>Move to favourite</button>
+                        </div>
                     </div>
 
                 </div>
-                <div class="order-or-not">
-                    <div class="buttons">
-                        <button mat-stroked-button color="accent">Remove</button>
-                        <button mat-stroked-button>Move to favourite</button>
-                    </div>
-                </div>
-
-            </div>
+            </ng-container>
         </div>
     </section>
     <section class="right">
-        <p>PRICE DETAILS</p>
+        <p style="margin-top: 0.2rem; font-weight: bold;">PRICE DETAILS</p>
         <hr>
         <div class="price">
-            <span>Price (2 items)</span>
-            <span>₹14,204</span>
+            <span>Price ({{cartItems.length}} item)</span>
+            <span>₹{{totalPrice}}</span>
         </div>
         <div class="Discount">
             <span>Discount</span>
-            <span>− ₹3,242</span>
+            <span>− ₹10</span>
         </div>
         <div class="deliery-charge">
             <span>Delivery Charges</span>
-            <span>₹80Free</span>
+            <span><s>₹80 </s>Free</span>
         </div>
         <div class="packaging-fee">
             <span>Secured Packaging Fee</span>
-            <span>₹29</span>
+            <span>₹10</span>
         </div>
         <hr>
         <div class="total-amount">
             <span>Total Amount</span>
-            <span>₹10,991</span>
+            <span>₹{{totalPrice}}</span>
         </div>
         <hr>
-        <p> <small>You will save ₹3,213 on this order</small></p><button mat-raised-button>Place Order</button>
+        <p> <small>* You will save ₹10 on this order</small></p><button mat-raised-button>Place Order</button>
     </section>
 </div>
+
+
+
