--- a/client/src/app/auth/sign-up/sign-up.component.scss
+++ b/client/src/app/auth/sign-up/sign-up.component.scss
@@ -20,6 +20,13 @@
 //     }
 //   }
 // }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
 
 .sign-form {
   display: flex;
@@ -83,7 +90,6 @@
     .input-content:focus {
       outline: none !important;
     }
-
 
     .sign-up-btn {
       background-color: #db7f79;
